Updating the Jenkinsfile Message

--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -8,16 +8,17 @@
     name: common 
     tasks_from: download-and-extract  
 
-- name: Cleanup of old html content 
-  ansible.builtin.file:
-    path: /usr/share/nginx/html
-    state: absent
+# Uncomment it only for downloading from Github
+# - name: Cleanup of old html content 
+#   ansible.builtin.file:
+#     path: /usr/share/nginx/html
+#     state: absent
 
-- name: Coping frotend context to nginx path 
-  ansible.builtin.copy:
-    src: /tmp/frontend-main/static/
-    dest: /usr/share/nginx/html
-    remote_src: yes
+# - name: Coping frotend context to nginx path 
+#   ansible.builtin.copy:
+#     src: /tmp/frontend-main/static/
+#     dest: /usr/share/nginx/html
+#     remote_src: yes
 
 - name: Coping proxy config 
   ansible.builtin.template:
