Updating the Jenkinsfile Message

--- a/roles/common/tasks/download-and-extract.yml
+++ b/roles/common/tasks/download-and-extract.yml
@@ -24,6 +24,7 @@
     src: http://172.31.0.75:8081/repository/{{COMPONENT}}/{{COMPONENT}}-{{APP_VERSION}}.zip
     dest: "{{APP_LOCATION}}"
     remote_src: yes 
+  become_user: "{{APPUSER}}"
 
 
 # Uncomment this only for download the code from nexus
