--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -11,6 +11,7 @@
     - mysql-community-server
     - gcc
     - python36-devel
+    - MySQL-python
     state: present 
 
 # Added :
@@ -19,8 +20,8 @@
     name: pip3-mysqlclient
     executable: pip3
   
-- name: Starting {{COMPONENT}} Service 
-  ansible.builtin.service:
+- name: Starting MySQL Service
+  ansible.builtin.systemd:
     name: mysqld
     state: started
     enabled: yes
@@ -49,7 +50,7 @@
     - name: Changing password 
       ansible.builtin.shell: mysql --connect-expired-password  -uroot -p"{{DEFAULT_ROOT_PASSWORD.stdout}}" < /tmp/rootpassword.sql 
       ignore_errors: yes
-      
+
 - name: Checking the validate_password plugin 
   ansible.builtin.shell: echo show plugins | mysql -uroot -pRoboShop@1 | grep validate_password 
   register: PLUGIN_INFO 
