--- a/roles/frontend/templates/roboshop.conf
+++ b/roles/frontend/templates/roboshop.conf
@@ -26,4 +26,7 @@
         access_log off;
     }
 
-# This is just a test commit to test the HANDLER
+    location /health {
+        stub_status on;
+        access_log off;
+    }
