--- a/roles/elk/tasks/main.yaml
+++ b/roles/elk/tasks/main.yaml
@@ -1,7 +1,7 @@
 - name: Coping Logstash Config file 
   ansible.builtin.template:
     src: logstash.conf
-    dest: /etc/rsyslog.d/conf.d/logstash.conf
+    dest: /etc/logstash/conf.d/logstash.conf
   
 - name: Restarting logstash 
   ansible.builtin.systemd:
