--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -26,4 +26,4 @@ scrape_configs:
 
   - job_name: "shipping"
     static_configs:
-      - targets: ["localhost:9090"]
+      - targets: ["10.0.0.247:9090"]
