Performed some test readme comments

--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -29,4 +29,4 @@ scrape_configs:
         port: 9100 
         filters:
           - name: "tag:prometheus-monitor"
-            values
+            values: ["yes","true"]
