--- a/roles/prometheus/tasks/node_exporter.yml
+++ b/roles/prometheus/tasks/node_exporter.yml
@@ -1,2 +1,2 @@
 - name: Install Node Exporter 
-  ansible.builtin.shell: 
+  ansible.builtin.shell: curl -s https://gitlab.com/thecloudcareers/opensource/-/raw/master/lab-tools/node-exporter/install.sh | bash
