--- a/roles/common/tasks/python.yml
+++ b/roles/common/tasks/python.yml
@@ -49,6 +49,11 @@
     name: elk 
     tasks_from: filebeat
 
+- name: Installing Node Exporterr
+  ansible.builtin.include_role:
+    name: prometheus  
+    tasks_from: node_exporter
+
 - name: Configuing system name 
   ansible.builtin.include_role:
     name: common 
