--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -29,4 +29,4 @@ scrape_configs:
         port: 9100 
         filters:
           - name: "tag:prometheus-monitor"
-            values: ["yes","true"]
+            values: ["yes", "true", "Yes", "YES", "TRUE"]
