--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -35,5 +35,5 @@ scrape_configs:
           target_label: instance_id 
         - source_labels: [__meta_ec2_tag_Name]
           target_label: instance       
-            
-__meta_ec2_private_ip
+         - source_labels: [__meta_ec2_private_ip]
+          target_label: private_ip            
